--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
     position: absolute;
     bottom: 50%;
     left: 50%;
+    min-height: 120px;
     transform: translate(-50%, -50%);
     z-index: 1;
 }
