--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 
 #hed {
     background-color: black;
-    height: 95vh;
+    height: 130vh;
     width: 100vw;
     position: relative;
 }
@@ -29,15 +29,14 @@ body {
 #headline {
     color: white;
     position: absolute;
-    bottom: 50%;
     left: 50%;
-    top: 30%;
+    top: 90%;
     width: max-content;
-
-    text-align: left !important;
+    max-width: 75%;
+    text-align: center !important;
     margin: auto;
     align-content: normal;
-    min-height: 120px;
+    min-height: 250px;
     transform: translate(-50%, -50%);
     z-index: 1;
 }
@@ -57,9 +56,9 @@ body {
     max-width: 1000px;
     min-width: 400px;
     position: absolute;
-    bottom: -5%;
+    bottom: 32%;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, 0) scale(1.3);
 }
 
 #left-gutter {
