--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 
 #hed {
     background-color: black;
-    height: 130vh;
+    height: 140vh;
     width: 100vw;
     position: relative;
 }
@@ -30,7 +30,7 @@ body {
     color: white;
     position: absolute;
     left: 50%;
-    top: 90%;
+    top: 36%;
     width: max-content;
     max-width: 75%;
     text-align: center !important;
@@ -47,7 +47,23 @@ body {
     transform: translate(-50%, -50%);
     bottom: 50%;
     left: 50%;
-    top: 35%;
+    top: 49%;
+    animation-name: fadein;
+    animation-duration: 2.5s;
+    animation-direction: linear;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.hidden {
+    display: none;
 }
 
 #main-art img {
@@ -56,9 +72,12 @@ body {
     max-width: 1000px;
     min-width: 400px;
     position: absolute;
-    bottom: 32%;
+    bottom: -5%;
     left: 50%;
-    transform: translate(-50%, 0) scale(1.3);
+    transform: translate(-50%, 0);
+    animation-name: fadein;
+    animation-duration: 3s;
+    animation-direction: linear;
 }
 
 #left-gutter {
