--- a/css/styles.css
+++ b/css/styles.css
@@ -254,3 +254,25 @@ h4 {
 figcaption{
     text-align: center;
 }
+
+
+/* Audio stuff */
+
+.play-pause-btn {
+    width: 20px;
+    aspect-ratio: 1;
+}
+
+.audio-card {
+    background-color: white;
+    padding: 7px;
+    border-radius: 10px;
+    width: fit-content;
+    display: flex;
+}
+
+.audio-card span {
+    padding: 0 6px;
+    align-items: center;
+    line-height: 25px;
+}
