--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ body {
 }
 
 #body-content {
-    max-width: 100vw;
+    max-width: 50vw;
     margin-top: 100px;
     color: white;
 }
@@ -405,4 +405,77 @@ figcaption{
     font-family: "forma-djr-text", sans-serif;
     font-weight: 400;
     font-style: normal;   
+}
+
+/* IMage slider */
+
+.image-slider {
+    display: flex;
+    overflow-x: auto;
+    padding: 10px;
+    scroll-snap-type: x mandatory;
+    width: 100%;
+}
+
+.slide {
+    width: 150px;
+    height: 100px;
+    object-fit: cover;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: transform 0.2s;
+    scroll-snap-align: start;
+}
+
+.slide:last-child {
+    margin-right: 0;
+}
+
+.slide:hover {
+    transform: scale(1.04);
+}
+
+.modal {
+    display: none;
+    position: fixed; 
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: contain;
+}
+
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.photo-container {
+    display: block;
+    width: 100%;
+    overflow: hidden;
 }
