--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ body {
 @media screen and (max-width: 576px) {
     
     #body-content {
+        max-width: 90vw;
         margin: 70% 10% 0 10%;
         padding-right: 12%;
     }
