--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,10 @@ body {
         margin-top: 20px !important;
     }
 
+    .line {
+        border-bottom: 1px solid black !important;
+    }
+
 }
 
 .dropcap {
