--- a/css/styles.css
+++ b/css/styles.css
@@ -224,9 +224,9 @@ body {
         border-bottom: 1px solid black !important;
     }
 
-	.scroll {
-	color: black;
-	}
+    .scroll {
+	display: none;
+    }
 
 }
 
